--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uuid/8.3.2/uuidv4.min.js"></script>
     <link rel="stylesheet" href="./style.css" />
     <script defer src="./script.js"></script>
-    <title>Document</title>
+    <title>CANVAN</title>
   </head>
   <body>
     <div class="container">
