--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="./img/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:image" content="./img/thum.png" />
+    <meta property="og:site_name" content="CANVAN" />
+    <meta
+      property="og:description"
+      content="내가 해야하는 일을 등록하고 이동시켜보세요!"
+    />
     <!--cdnuuid-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uuid/8.3.2/uuidv4.min.js"></script>
     <link rel="stylesheet" href="./style.css" />
